src/main/java/org/rebecalang/timedrebeca2rtmaude/counterexampleinterpreter/compiler/RTMaudeResultParser.java
// Generated from RTMaudeResult.g4 by ANTLR 4.3
package org.rebecalang.timedrebeca2rtmaude.counterexampleinterpreter.compiler;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class RTMaudeResultParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, IN=2, TIME=3, COMMA=4, OPENBRACE=5, CLOSEBRACE=6, WITH=7, DMSG=8, 
		EMPTYVAL=9, FROM=10, TO=11, DEADLINE=12, STATEVARS=13, IDGEN=14, REBECQUEUE=15, 
		TOEXEC=16, GT=17, LT=18, DBCOLON=19, COLON=20, NIL=21, ARROW=22, INT=23, 
		BOOL=24, DASHID=25, QID=26, TQID=27, ID=28;
	public static final String[] tokenNames = {
		"<INVALID>", "WS", "'in'", "'time'", "','", "'{'", "'}'", "'with'", "'delayedMsg'", 
		"'emptyValuation'", "'from'", "'to'", "'deadline'", "'stateVars'", "IDGEN", 
		"REBECQUEUE", "TOEXEC", "'>'", "'<'", "'::'", "':'", "'nil'", "'|->'", 
		"INT", "BOOL", "DASHID", "QID", "TQID", "ID"
	};
	public static final int
		RULE_reactiveClassDeclaration = 0, RULE_configuration = 1, RULE_state = 2, 
		RULE_rebec = 3, RULE_delayedMsg = 4, RULE_msg = 5, RULE_inQueue = 6, RULE_stateVariables = 7, 
		RULE_params = 8;
	public static final String[] ruleNames = {
		"reactiveClassDeclaration", "configuration", "state", "rebec", "delayedMsg", 
		"msg", "inQueue", "stateVariables", "params"
	};

	@Override
	public String getGrammarFileName() { return "RTMaudeResult.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public RTMaudeResultParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ReactiveClassDeclarationContext extends ParserRuleContext {
		public String res;
		public int id;
		public ConfigurationContext resConf;
		public ConfigurationContext configuration(int i) {
			return getRuleContext(ConfigurationContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(RTMaudeResultParser.COMMA); }
		public List<ConfigurationContext> configuration() {
			return getRuleContexts(ConfigurationContext.class);
		}
		public TerminalNode COMMA(int i) {
			return getToken(RTMaudeResultParser.COMMA, i);
		}
		public ReactiveClassDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_reactiveClassDeclaration; }
	}

	public final ReactiveClassDeclarationContext reactiveClassDeclaration() throws RecognitionException {
		ReactiveClassDeclarationContext _localctx = new ReactiveClassDeclarationContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_reactiveClassDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			((ReactiveClassDeclarationContext)_localctx).res =  "<counter-example-trace>"; ((ReactiveClassDeclarationContext)_localctx).id = 0;
			{
			setState(19); ((ReactiveClassDeclarationContext)_localctx).resConf = configuration();
			_localctx.id+=1; ((ReactiveClassDeclarationContext)_localctx).res =  _localctx.res+"\n<state id="+_localctx.id+">"+((ReactiveClassDeclarationContext)_localctx).resConf.retConf+"\n</state>";
			}
			setState(33);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA || _la==OPENBRACE) {
				{
				{
				setState(25);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(22); match(COMMA);
					}
					}
					setState(27);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(28); ((ReactiveClassDeclarationContext)_localctx).resConf = configuration();
				_localctx.id+=1; ((ReactiveClassDeclarationContext)_localctx).res = _localctx.res+"\n<state id="+_localctx.id+">"+((ReactiveClassDeclarationContext)_localctx).resConf.retConf+"\n</state>";
				}
				}
				setState(35);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			 ((ReactiveClassDeclarationContext)_localctx).res =  _localctx.res+"\n</counter-example-trace>\n";
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConfigurationContext extends ParserRuleContext {
		public String retConf;
		public StateContext resSt;
		public TerminalNode TQID(int i) {
			return getToken(RTMaudeResultParser.TQID, i);
		}
		public List<TerminalNode> TIME() { return getTokens(RTMaudeResultParser.TIME); }
		public List<TerminalNode> INT() { return getTokens(RTMaudeResultParser.INT); }
		public List<TerminalNode> ID() { return getTokens(RTMaudeResultParser.ID); }
		public TerminalNode TIME(int i) {
			return getToken(RTMaudeResultParser.TIME, i);
		}
		public StateContext state() {
			return getRuleContext(StateContext.class,0);
		}
		public TerminalNode INT(int i) {
			return getToken(RTMaudeResultParser.INT, i);
		}
		public TerminalNode COMMA(int i) {
			return getToken(RTMaudeResultParser.COMMA, i);
		}
		public List<TerminalNode> DASHID() { return getTokens(RTMaudeResultParser.DASHID); }
		public List<TerminalNode> IN() { return getTokens(RTMaudeResultParser.IN); }
		public List<TerminalNode> TQID() { return getTokens(RTMaudeResultParser.TQID); }
		public TerminalNode IN(int i) {
			return getToken(RTMaudeResultParser.IN, i);
		}
		public TerminalNode CLOSEBRACE() { return getToken(RTMaudeResultParser.CLOSEBRACE, 0); }
		public TerminalNode DASHID(int i) {
			return getToken(RTMaudeResultParser.DASHID, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(RTMaudeResultParser.COMMA); }
		public TerminalNode OPENBRACE() { return getToken(RTMaudeResultParser.OPENBRACE, 0); }
		public TerminalNode ID(int i) {
			return getToken(RTMaudeResultParser.ID, i);
		}
		public ConfigurationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_configuration; }
	}

	public final ConfigurationContext configuration() throws RecognitionException {
		ConfigurationContext _localctx = new ConfigurationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_configuration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			((ConfigurationContext)_localctx).retConf =  "";
			setState(39); match(OPENBRACE);
			{
			setState(40); ((ConfigurationContext)_localctx).resSt = state();
			((ConfigurationContext)_localctx).retConf =  _localctx.retConf+((ConfigurationContext)_localctx).resSt.retSt;
			}
			setState(48);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IN) {
				{
				{
				setState(43); match(IN);
				setState(44); match(TIME);
				setState(45); match(INT);
				}
				}
				setState(50);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(55);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(51); match(COMMA);
				setState(52);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DASHID) | (1L << TQID) | (1L << ID))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				}
				}
				setState(57);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(58); match(CLOSEBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StateContext extends ParserRuleContext {
		public String retSt;
		public DelayedMsgContext resdMsg;
		public RebecContext resRebec;
		public MsgContext resMsg;
		public List<RebecContext> rebec() {
			return getRuleContexts(RebecContext.class);
		}
		public List<MsgContext> msg() {
			return getRuleContexts(MsgContext.class);
		}
		public DelayedMsgContext delayedMsg(int i) {
			return getRuleContext(DelayedMsgContext.class,i);
		}
		public TerminalNode CLOSEBRACE() { return getToken(RTMaudeResultParser.CLOSEBRACE, 0); }
		public RebecContext rebec(int i) {
			return getRuleContext(RebecContext.class,i);
		}
		public List<DelayedMsgContext> delayedMsg() {
			return getRuleContexts(DelayedMsgContext.class);
		}
		public MsgContext msg(int i) {
			return getRuleContext(MsgContext.class,i);
		}
		public TerminalNode OPENBRACE() { return getToken(RTMaudeResultParser.OPENBRACE, 0); }
		public StateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_state; }
	}

	public final StateContext state() throws RecognitionException {
		StateContext _localctx = new StateContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_state);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			((StateContext)_localctx).retSt =  "\n<floatBag>";
			setState(61); match(OPENBRACE);
			setState(67);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DMSG) {
				{
				{
				setState(62); ((StateContext)_localctx).resdMsg = delayedMsg();
				((StateContext)_localctx).retSt = _localctx.retSt+"\n<delayedMSG after="+((StateContext)_localctx).resdMsg.dAfter+" deadline="+((StateContext)_localctx).resdMsg.dDeadline+" sender="+((StateContext)_localctx).resdMsg.dSender+" receiver="+((StateContext)_localctx).resdMsg.dReceiver+">"+((StateContext)_localctx).resdMsg.retdMsg+((StateContext)_localctx).resdMsg.dArguments+"</delayedMSG>";
				}
				}
				setState(69);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			((StateContext)_localctx).retSt = _localctx.retSt+"\n</floatBag>";
			setState(76);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==LT) {
				{
				{
				setState(71); ((StateContext)_localctx).resRebec = rebec();
				((StateContext)_localctx).retSt = _localctx.retSt+((StateContext)_localctx).resRebec.retRebec;
				}
				}
				setState(78);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			_localctx.retSt+="\n<undeliveredMSG>";
			setState(85);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DASHID) {
				{
				{
				setState(80); ((StateContext)_localctx).resMsg = msg();
				((StateContext)_localctx).retSt = _localctx.retSt+"\n<message deadline="+((StateContext)_localctx).resMsg.Deadline+" sender="+((StateContext)_localctx).resMsg.Sender+" receiver="+((StateContext)_localctx).resMsg.Receiver+">"+((StateContext)_localctx).resMsg.retMsg+((StateContext)_localctx).resMsg.Arguments+"</message>";
				}
				}
				setState(87);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(88); match(CLOSEBRACE);
			_localctx.retSt+="\n</undeliveredMSG>";
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RebecContext extends ParserRuleContext {
		public String retRebec;
		public Token RebecName;
		public InQueueContext inMsg;
		public StateVariablesContext resStVar;
		public TerminalNode NIL(int i) {
			return getToken(RTMaudeResultParser.NIL, i);
		}
		public TerminalNode INT() { return getToken(RTMaudeResultParser.INT, 0); }
		public TerminalNode TOEXEC() { return getToken(RTMaudeResultParser.TOEXEC, 0); }
		public TerminalNode ID() { return getToken(RTMaudeResultParser.ID, 0); }
		public List<TerminalNode> NIL() { return getTokens(RTMaudeResultParser.NIL); }
		public TerminalNode DBCOLON(int i) {
			return getToken(RTMaudeResultParser.DBCOLON, i);
		}
		public TerminalNode QID() { return getToken(RTMaudeResultParser.QID, 0); }
		public TerminalNode IDGEN() { return getToken(RTMaudeResultParser.IDGEN, 0); }
		public TerminalNode COMMA(int i) {
			return getToken(RTMaudeResultParser.COMMA, i);
		}
		public List<InQueueContext> inQueue() {
			return getRuleContexts(InQueueContext.class);
		}
		public TerminalNode REBECQUEUE() { return getToken(RTMaudeResultParser.REBECQUEUE, 0); }
		public InQueueContext inQueue(int i) {
			return getRuleContext(InQueueContext.class,i);
		}
		public List<TerminalNode> DBCOLON() { return getTokens(RTMaudeResultParser.DBCOLON); }
		public TerminalNode LT() { return getToken(RTMaudeResultParser.LT, 0); }
		public List<TerminalNode> COMMA() { return getTokens(RTMaudeResultParser.COMMA); }
		public StateVariablesContext stateVariables() {
			return getRuleContext(StateVariablesContext.class,0);
		}
		public TerminalNode COLON(int i) {
			return getToken(RTMaudeResultParser.COLON, i);
		}
		public TerminalNode GT() { return getToken(RTMaudeResultParser.GT, 0); }
		public List<TerminalNode> COLON() { return getTokens(RTMaudeResultParser.COLON); }
		public RebecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rebec; }
	}

	public final RebecContext rebec() throws RecognitionException {
		RebecContext _localctx = new RebecContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_rebec);
		int _la;
		try {
			setState(132);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				((RebecContext)_localctx).retRebec =  "\n<rebec name=";
				setState(92); match(LT);
				{
				setState(93); ((RebecContext)_localctx).RebecName = match(QID);
				((RebecContext)_localctx).retRebec = _localctx.retRebec+(((RebecContext)_localctx).RebecName!=null?((RebecContext)_localctx).RebecName.getText():null)+">";
				}
				setState(96); match(COLON);
				setState(97); match(REBECQUEUE);
				setState(98); match(COLON);
				((RebecContext)_localctx).retRebec = _localctx.retRebec+"\n<queue>";
				setState(110); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					setState(110);
					switch (_input.LA(1)) {
					case NIL:
						{
						setState(100); match(NIL);
						}
						break;
					case DASHID:
						{
						{
						setState(101); ((RebecContext)_localctx).inMsg = inQueue();
						((RebecContext)_localctx).retRebec = _localctx.retRebec+"\n<qMSG deadline="+((RebecContext)_localctx).inMsg.iDeadline+" sender="+((RebecContext)_localctx).inMsg.iSender+">"+((RebecContext)_localctx).inMsg.retMsgName+((RebecContext)_localctx).inMsg.iArguments+"</qMSG>";
						}
						setState(107);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while (_la==DBCOLON) {
							{
							{
							setState(104); match(DBCOLON);
							}
							}
							setState(109);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					setState(112); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==NIL || _la==DASHID );
				((RebecContext)_localctx).retRebec = _localctx.retRebec+"\n</queue>";
				setState(115); match(COMMA);
				{
				setState(116); ((RebecContext)_localctx).resStVar = stateVariables();
				((RebecContext)_localctx).retRebec = _localctx.retRebec+" "+((RebecContext)_localctx).resStVar.retStVar;
				}
				setState(119); match(COMMA);
				setState(120); match(TOEXEC);
				setState(121); match(COLON);
				setState(122); match(ID);
				setState(123); match(GT);
				_localctx.retRebec +="\n</rebec>";
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				((RebecContext)_localctx).retRebec =  " ";
				setState(127); match(LT);
				setState(128); match(IDGEN);
				setState(129); match(COLON);
				setState(130); match(INT);
				setState(131); match(GT);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DelayedMsgContext extends ParserRuleContext {
		public String retdMsg;
		public String dArguments;
		public String dDeadline;
		public String dSender;
		public String dReceiver;
		public String dAfter;
		public Token resDMDash;
		public ParamsContext par;
		public Token sendr;
		public Token rcvr;
		public Token ddline;
		public Token after;
		public List<TerminalNode> INT() { return getTokens(RTMaudeResultParser.INT); }
		public TerminalNode QID(int i) {
			return getToken(RTMaudeResultParser.QID, i);
		}
		public TerminalNode WITH() { return getToken(RTMaudeResultParser.WITH, 0); }
		public TerminalNode DEADLINE() { return getToken(RTMaudeResultParser.DEADLINE, 0); }
		public List<TerminalNode> QID() { return getTokens(RTMaudeResultParser.QID); }
		public TerminalNode INT(int i) {
			return getToken(RTMaudeResultParser.INT, i);
		}
		public TerminalNode DASHID() { return getToken(RTMaudeResultParser.DASHID, 0); }
		public List<ParamsContext> params() {
			return getRuleContexts(ParamsContext.class);
		}
		public TerminalNode COMMA() { return getToken(RTMaudeResultParser.COMMA, 0); }
		public TerminalNode TO() { return getToken(RTMaudeResultParser.TO, 0); }
		public TerminalNode DMSG() { return getToken(RTMaudeResultParser.DMSG, 0); }
		public ParamsContext params(int i) {
			return getRuleContext(ParamsContext.class,i);
		}
		public TerminalNode FROM() { return getToken(RTMaudeResultParser.FROM, 0); }
		public DelayedMsgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_delayedMsg; }
	}

	public final DelayedMsgContext delayedMsg() throws RecognitionException {
		DelayedMsgContext _localctx = new DelayedMsgContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_delayedMsg);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			((DelayedMsgContext)_localctx).retdMsg = "";((DelayedMsgContext)_localctx).dArguments = "(";
			setState(135); match(DMSG);
			{
			setState(136); ((DelayedMsgContext)_localctx).resDMDash = match(DASHID);
			_localctx.retdMsg+=(((DelayedMsgContext)_localctx).resDMDash!=null?((DelayedMsgContext)_localctx).resDMDash.getText():null);
			}
			setState(139); match(WITH);
			setState(143); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(140); ((DelayedMsgContext)_localctx).par = params();
				((DelayedMsgContext)_localctx).dArguments = _localctx.dArguments+((DelayedMsgContext)_localctx).par.retVal+",";
				}
				}
				setState(145); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==EMPTYVAL || _la==DASHID );
			setState(147); match(FROM);
			{
			setState(148); ((DelayedMsgContext)_localctx).sendr = match(QID);
			((DelayedMsgContext)_localctx).dSender = (((DelayedMsgContext)_localctx).sendr!=null?((DelayedMsgContext)_localctx).sendr.getText():null);
			}
			setState(151); match(TO);
			{
			setState(152); ((DelayedMsgContext)_localctx).rcvr = match(QID);
			((DelayedMsgContext)_localctx).dReceiver = (((DelayedMsgContext)_localctx).rcvr!=null?((DelayedMsgContext)_localctx).rcvr.getText():null);
			}
			setState(155); match(DEADLINE);
			{
			setState(156); ((DelayedMsgContext)_localctx).ddline = match(INT);
			((DelayedMsgContext)_localctx).dDeadline = (((DelayedMsgContext)_localctx).ddline!=null?((DelayedMsgContext)_localctx).ddline.getText():null);
			}
			setState(159); match(COMMA);
			{
			setState(160); ((DelayedMsgContext)_localctx).after = match(INT);
			((DelayedMsgContext)_localctx).dAfter = (((DelayedMsgContext)_localctx).after!=null?((DelayedMsgContext)_localctx).after.getText():null);
			}
			_localctx.dArguments+=")";
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MsgContext extends ParserRuleContext {
		public String retMsg;
		public String Arguments;
		public String Deadline;
		public String Sender;
		public String Receiver;
		public Token resMDash;
		public ParamsContext par;
		public Token sendr;
		public Token rcvr;
		public Token ddline;
		public TerminalNode DASHID() { return getToken(RTMaudeResultParser.DASHID, 0); }
		public List<ParamsContext> params() {
			return getRuleContexts(ParamsContext.class);
		}
		public TerminalNode INT() { return getToken(RTMaudeResultParser.INT, 0); }
		public TerminalNode QID(int i) {
			return getToken(RTMaudeResultParser.QID, i);
		}
		public TerminalNode WITH() { return getToken(RTMaudeResultParser.WITH, 0); }
		public List<TerminalNode> QID() { return getTokens(RTMaudeResultParser.QID); }
		public TerminalNode DEADLINE() { return getToken(RTMaudeResultParser.DEADLINE, 0); }
		public TerminalNode TO() { return getToken(RTMaudeResultParser.TO, 0); }
		public ParamsContext params(int i) {
			return getRuleContext(ParamsContext.class,i);
		}
		public TerminalNode FROM() { return getToken(RTMaudeResultParser.FROM, 0); }
		public MsgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_msg; }
	}

	public final MsgContext msg() throws RecognitionException {
		MsgContext _localctx = new MsgContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_msg);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			((MsgContext)_localctx).retMsg = "";((MsgContext)_localctx).Arguments = "(";
			{
			setState(166); ((MsgContext)_localctx).resMDash = match(DASHID);
			_localctx.retMsg+=(((MsgContext)_localctx).resMDash!=null?((MsgContext)_localctx).resMDash.getText():null);
			}
			setState(169); match(WITH);
			setState(173); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(170); ((MsgContext)_localctx).par = params();
				((MsgContext)_localctx).Arguments = _localctx.Arguments+((MsgContext)_localctx).par.retVal+",";
				}
				}
				setState(175); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==EMPTYVAL || _la==DASHID );
			setState(177); match(FROM);
			{
			setState(178); ((MsgContext)_localctx).sendr = match(QID);
			((MsgContext)_localctx).Sender = (((MsgContext)_localctx).sendr!=null?((MsgContext)_localctx).sendr.getText():null);
			}
			setState(181); match(TO);
			{
			setState(182); ((MsgContext)_localctx).rcvr = match(QID);
			((MsgContext)_localctx).Receiver = (((MsgContext)_localctx).rcvr!=null?((MsgContext)_localctx).rcvr.getText():null);
			}
			setState(185); match(DEADLINE);
			{
			setState(186); ((MsgContext)_localctx).ddline = match(INT);
			((MsgContext)_localctx).Deadline = (((MsgContext)_localctx).ddline!=null?((MsgContext)_localctx).ddline.getText():null);
			}
			_localctx.Arguments+=")";
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InQueueContext extends ParserRuleContext {
		public String retMsgName;
		public String iArguments;
		public String iDeadline;
		public String iSender;
		public Token retDash;
		public ParamsContext par;
		public Token sendr;
		public Token ddline;
		public TerminalNode DASHID() { return getToken(RTMaudeResultParser.DASHID, 0); }
		public List<ParamsContext> params() {
			return getRuleContexts(ParamsContext.class);
		}
		public TerminalNode INT() { return getToken(RTMaudeResultParser.INT, 0); }
		public TerminalNode WITH() { return getToken(RTMaudeResultParser.WITH, 0); }
		public TerminalNode QID() { return getToken(RTMaudeResultParser.QID, 0); }
		public TerminalNode DEADLINE() { return getToken(RTMaudeResultParser.DEADLINE, 0); }
		public ParamsContext params(int i) {
			return getRuleContext(ParamsContext.class,i);
		}
		public TerminalNode FROM() { return getToken(RTMaudeResultParser.FROM, 0); }
		public InQueueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inQueue; }
	}

	public final InQueueContext inQueue() throws RecognitionException {
		InQueueContext _localctx = new InQueueContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_inQueue);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			((InQueueContext)_localctx).retMsgName = "";((InQueueContext)_localctx).iArguments = "(";
			{
			setState(192); ((InQueueContext)_localctx).retDash = match(DASHID);
			((InQueueContext)_localctx).retMsgName =  (((InQueueContext)_localctx).retDash!=null?((InQueueContext)_localctx).retDash.getText():null);
			}
			setState(195); match(WITH);
			setState(199); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(196); ((InQueueContext)_localctx).par = params();
				((InQueueContext)_localctx).iArguments = _localctx.iArguments+((InQueueContext)_localctx).par.retVal+",";
				}
				}
				setState(201); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==EMPTYVAL || _la==DASHID );
			setState(203); match(FROM);
			{
			setState(204); ((InQueueContext)_localctx).sendr = match(QID);
			((InQueueContext)_localctx).iSender = (((InQueueContext)_localctx).sendr!=null?((InQueueContext)_localctx).sendr.getText():null);
			}
			setState(207); match(DEADLINE);
			{
			setState(208); ((InQueueContext)_localctx).ddline = match(INT);
			((InQueueContext)_localctx).iDeadline = (((InQueueContext)_localctx).ddline!=null?((InQueueContext)_localctx).ddline.getText():null);
			}
			_localctx.iArguments+=")";
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StateVariablesContext extends ParserRuleContext {
		public String retStVar;
		public ParamsContext StVar;
		public List<ParamsContext> params() {
			return getRuleContexts(ParamsContext.class);
		}
		public TerminalNode STATEVARS() { return getToken(RTMaudeResultParser.STATEVARS, 0); }
		public TerminalNode COLON() { return getToken(RTMaudeResultParser.COLON, 0); }
		public ParamsContext params(int i) {
			return getRuleContext(ParamsContext.class,i);
		}
		public StateVariablesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stateVariables; }
	}
